logo animation and favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="SPACE ATHLETICS FEDERATION™" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="animate.min.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="script.js"></script>
   </head>
   <link rel="stylesheet" type="text/css" href="style.css" />
@@ -244,7 +245,8 @@
         logo.classList.add(
           "animate__animated",
           "animate__zoomIn",
-          "animate__faster"
+          "animate__fadeIn",
+          "animate__slower"
         );
       }
     }
